--- a/vignettes/NetRep.Rmd
+++ b/vignettes/NetRep.Rmd
@@ -177,7 +177,7 @@ discovery_network <- load.bigMatrix(backingfile="discovery_network.bm")
 
 Elements in the `bigMatrix` object can be accessed just like regular matrices:
 
-```{r, hold=TRUE}
+```{r}
 discovery_network[1:5, 1:5]
 ```
 
@@ -292,7 +292,7 @@ network_list <- list(cohort1=discovery_network, cohort2=test_network)
 
 preservation <- modulePreservation(
  data=data_list, correlation=correlation_list, network=network_list,
- moduleAssignments=module_labels, nPerm=101, discovery="cohort1", 
+ moduleAssignments=module_labels, nPerm=100, discovery="cohort1", 
  test="cohort2", verbose=TRUE
 )
 ```
@@ -307,19 +307,18 @@ preservation <- readRDS("preservation-analysis-results.rds")
 # The results are stored as a list. The table of permutation test p-values is 
 # stored in the element named "p.value". 
 preservation$p.value
+```
 
+```{r, echo=FALSE}
+# This is the code that actually gets run in the Rmarkdown document
+preservation$p.value
+```
+
+```{r}
 # Get the maximum permutation test p-value
 max_pval <- apply(preservation$p.value, 1, max)
 max_pval
 ```
-
-```{r, echo=FALSE, hold=TRUE}
-# This is the code that actually gets run in the Rmarkdown document
-preservation$p.value
-max_pval <- apply(preservation$p.value, 1, max)
-max_pval
-```
-
 Only modules 1 and 4 are reproducible at this significance threshold.
 
 ## Visualising network modules
@@ -368,7 +367,7 @@ function:
 
 First, let's look at the four modules in the *discovery* dataset:
 
-```{r, dev="png", fig.height=6, fig.width=6, fig.align="center", results="hold", fig.keep="last", fig.show="hold"}
+```{r modules_in_discovery, dev="png", fig.height=6, fig.width=6, fig.align="center", results="hold", fig.keep="last", fig.show="hold"}
 plotModule(
   data=data_list, correlation=correlation_list, network=network_list, 
   moduleAssignments=module_labels, modules=c(1,2,3,4),
@@ -401,7 +400,7 @@ When we plot the four modules in the test dataset, the nodes remain in the same
 order: that is, in decreasing order of *weighted degree* in the *test* dataset.
 This allows you to directly compare topology plots in each dataset of interest:
 
-```{r, dev="png", fig.height=6, fig.width=6, fig.align="center", results="hold", fig.keep="last", fig.show="hold"}
+```{r modules_in_test, dev="png", fig.height=6, fig.width=6, fig.align="center", results="hold", fig.keep="last", fig.show="hold"}
 plotModule(
   data=data_list, correlation=correlation_list, network=network_list, 
   moduleAssignments=module_labels, modules=c(1,2,3,4),
@@ -427,7 +426,7 @@ datasets. For preserved modules, this provides a more robust estimate of
 the *weighted degree* and a more robust ordering of nodes by relative importance
 to their module, so we will plot just modules 1 and 4
 
-```{r, dev="png", fig.height=6, fig.width=6, fig.align="center", results="hold", fig.keep="last", fig.show="hold"}
+```{r mean_degree, dev="png", fig.height=6, fig.width=6, fig.align="center", results="hold", fig.keep="last", fig.show="hold"}
 plotModule(
   data=data_list, correlation=correlation_list, network=network_list, 
   moduleAssignments=module_labels, modules=c(1,4), # only the preserved modules
@@ -450,7 +449,7 @@ heatmaps, both of which may take some time for large modules.
 
 Let's tweak the previous plot:
 
-```{r, dev="png", fig.height=6, fig.width=6, fig.align="center", results="hold", fig.keep="last", fig.show="hold"}
+```{r dry_run, dev="png", fig.height=6, fig.width=6, fig.align="center", results="hold", fig.keep="last", fig.show="hold"}
 plotModule(
   data=data_list, correlation=correlation_list, network=network_list, 
   moduleAssignments=module_labels, modules=c(1,4),
@@ -465,7 +464,7 @@ ordered as specified in the `modules` argument.
 
 Now we can quickly iterate over parameters until we're happy with the plot:
 
-```{r, dev="png", fig.height=6, fig.width=6, fig.align="center", results="hold", fig.keep="last", fig.show="hold"}
+```{r dry_run_customised, dev="png", fig.height=6, fig.width=6, fig.align="center", results="hold", fig.keep="last", fig.show="hold"}
 # Change the margins so the plot is more compressed. Alternatively we could 
 # change the device window.
 par(mar=c(3,10,3,10)) # bottom, left, top, right margin sizes
@@ -491,7 +490,7 @@ plotModule(
 
 Once we're happy, we can turn off the `dryRun` parameter:
 
-```{r, dev="png", fig.height=6, fig.width=6, fig.align="center", results="hold", fig.keep="last", fig.show="hold"}
+```{r mean_degree_customised, dev="png", fig.height=6, fig.width=6, fig.align="center", results="hold", fig.keep="last", fig.show="hold"}
 par(mar=c(3,10,3,10)) 
 plotModule(
   data=data_list, correlation=correlation_list, network=network_list, 
@@ -507,7 +506,7 @@ plotModule(
 We can also plot individual components of the plot separately. For example, 
 a heatmap of the correlation structure:
 
-```{r, dev="png", fig.height=6, fig.width=6, fig.align="center", results="hold", fig.keep="last", fig.show="hold"}
+```{r correlation_heatmap, dev="png", fig.height=6, fig.width=6, fig.align="center", results="hold", fig.keep="last", fig.show="hold"}
 par(mar=c(5,5,3,3)) 
 plotCorrelation(
   data=data_list, correlation=correlation_list, network=network_list, 
@@ -597,14 +596,77 @@ properties[["cohort2"]][["1"]][["coherence"]]
 
 ## Running NetRep on a cluster
 
-Estimating runtime and memory usage
+Module preservation analyses are typically too computationally intense to run
+interactively on the head node of a cluster. As per the tutorial, we recommend 
+splitting your analysis into the following scripts:
 
+ 1. A script to save your networks, the data, and the correlation structure in
+    shared memory using the `bigMatrix` class.
+ 2. A script to load in the `bigMatrix` data and wrap them in lists used by 
+    NetRep's functions. This script will be called from the following scripts,
+    as well as in interactive R sessions.
+ 3. A script that runs the `modulePreservation` analysis for your modules of
+    interest.
+ 4. A script that visualises your modules of interest.
+ 5. A script that calculates and saves the network properties for your modules
+    of interest.
 
+We recommend writing the visualisation script with the `dryRun` parameter set
+to `TRUE` at first. This can be run interactively to determine whether 
+modifications need to be made to figures. Once you're happy with the plot size
+and layout, you should set `dryRun` to `FALSE` and run the script as a batch 
+job.
 
+### Setting the number of cores
 
+NetRep's functions can only be parallelised over CPUs that share memory. On
+most clusters, this means that NetRep's functions can only be parallelised
+on one physical node when submitting your batch jobs. You should refer to the
+relevant documentation for your cluster to determine the number of CPUs that 
+exist on a single node of your cluster. Since you must explicitly set the
+number of CPUs for your job when submitting your job request, you must also 
+set this number in the `nCores` argument in NetRep's functions. This includes
+the `modulePreservation`, `plotModule`, `networkProperties`, and associated 
+functions.
 
+To parallelise the permutation procedure in `modulePreservation` across multiple
+nodes you can use the `combineAnalyses` function. In this case, you must submit
+multiple jobs for the module preservation analysis and set the number of 
+permutations (using the `nPerm` argument) in each job to be the total number of
+permutations divided by the number of jobs you will submit. The `combineAnalyses` 
+function will take the output of the `modulePreservation` function, combine the
+null distributions, and calculate the permutation test p-values using the 
+combined permutations of each module preservation statistic.
 
+### Estimating memory usage
 
+Provided there are no other R objects in your R session, the memory required 
+for each job can be estimated as the sum of:
 
+ - 200 MB multiplied by the number of cores (the memory taken by an empty R 
+   session)
+ - The memory taken by the data matrices, correlation matrices, and network
+   matrices for the dataset comparison. This corresponds to the size of their
+   backing file on disk, which has a `.bin` extension.
+ - Memory to hold the permutation test results. This is roughly 5 MB for 10
+   modules and 10,000 permutations, or can be directly estimated by comparing
+   the size of an empty R session before and after creating an array to store
+   the permutations: `array(1.0, dim=c(nModules, 7, nPerm))`.
+   
+### Estimating wall time
 
+The required runtime of the permutation procedure will vary depending on the 
+size of the network, the size of the modules, the number of samples in each 
+dataset, the number of modules, and the number of permutations.
+
+To estimate the wall time required we first recommend wrapping the module 
+preservation script in a call to `system.time` and running `modulePreservation` 
+with a small number of permutations (e.g. 100) per core. The "elapsed" time 
+can then be divided by the number of permutations in the trial run, multiplied
+by the total number of permutations desiered, and then dividing by the number 
+of cores.
+
+Calculation of the network properties should take no longer than the trial run.
+Plotting the modules may take longer when rendering of heatmaps for large
+modules.
 
