--- a/vignettes/NetRep.Rmd
+++ b/vignettes/NetRep.Rmd
@@ -41,29 +41,29 @@ Application of this method can answer questions such as:
 A typical workflow for a **NetRep** analysis will usually contain the following 
 steps, usually as separate scripts.
 
-1. Calculate correlation structure and network edges in each dataset 
+1. Calculate the correlation structure and network edges in each dataset 
    using some network inference algorithm.
-2. Load these matrices into R and set up the input lists for NetRep's 
+2. Load these matrices into R and set up the input lists for **NetRep**'s 
    functions.
-3. Run the `modulePreservation` analysis to determine which modules are 
+3. Run the permutation test procedure to determine which modules are 
    preserved in your test dataset(s).
 4. Visualise your modules of interest.
 5. Calculate the network properties in your modules of interest
-   for downstream analysis. 
-
-We recommend familiarising yourself with the **NetRep** workflow
-before modifying the code for your own data since each step can take a 
-substantial amount of time on large datasets, for which **NetRep** should not be 
-run interactively.
+   for downstream analyses. 
 
 ## System requirements and installation troubleshooting
 
 **NetRep** and its dependencies require several third party libraries to be
 installed. If not found, installation of the package will fail.
 
+**NetRep** requires:
+
  1. A compiler with `C++11` support for the `<thread>` libary.
  2. A `fortran` compiler.
  3. `BLAS` and `LAPACK` libraries.
+ 
+The following sections provide operating system specific advice for getting
+**NetRep** working if installation through R fails.
  
 ### OSX
 
@@ -77,8 +77,8 @@ their Terminal application: `xcode-select --install`.
 Some users on OSX Mavericks have reported that even after this step they 
 receive errors relating to `-lgfortran` or `-lquadmath`. This is reportedly 
 solved by installing the version of `gfortran` used to compile the R binary for
-your system: `gfortran-4.8.2`, using the following commands in your `Terminal` 
-application
+OSX: `gfortran-4.8.2`. This can be done using the following commands in your 
+`Terminal` application: 
 
 ```{r, engine="bash", eval=FALSE}
 curl -O http://r.research.att.com/libs/gfortran-4.8.2-darwin13.tar.bz2
@@ -87,12 +87,12 @@ sudo tar fvxz gfortran-4.8.2-darwin13.tar.bz2 -C /
 
 ### Windows
 
-**NetRep** can be installed on Windows in R version 3.3.0 or later. The 
+For Windows users **NetRep** requires R version 3.3.0 or later. The 
 necessary `fortran` and `C++11` compilers are provided with the `Rtools` 
 program. We recommend installation of `NetRep` through `RStudio`, which should
 prompt the user and install these tools when running 
 `devtools::install_github("InouyeLab/NetRep")`. You may need to run this 
-command again after Rtools finishes installing.
+command again after `Rtools` finishes installing.
 
 ### Linux
 
@@ -101,14 +101,13 @@ error about `namespace thread`, you will need to install a newer version of
 your compiler that supports this `C++11` feature. We have found that this works
 on versions of `gcc` as old as `gcc-4.6.3`.
 
-If installation fails prior to this it is likely that you will need to install
-the necessary compilers and libraries, then reinstall R. For `C++` and 
+If installation fails prior to this step it is likely that you will need to 
+install the necessary compilers and libraries, then reinstall R. For `C++` and 
 `fortran` compilers we recommend installing `g++` and `gfortran` from the
 appropriate package manager for your operating system (e.g. `apt-get` for 
 Ubuntu). `BLAS` and `LAPACK` libraries can be installed by installing 
 `libblas-dev` and `liblapack-dev`. Note that these libraries **must** be
 installed prior to installation of R.
-
 
 ## Data required for a NetRep analysis
 
@@ -120,21 +119,18 @@ pre-computed for each dataset:
  - A matrix whose entries contain the correlation coefficient between each pair
    of nodes in the network.
  - a vector containing the module/group label for each node in the network
-   is required for each discovery dataset.
+   for each discovery dataset.
  - Optionally, a "data matrix", which contains the data used to calculate the 
-   correlation structure and infer the network, e.g. gene expression data.
+   correlation structure and infer the network, *e.g.* gene expression data.
 
 There are many different approaches to network inference and module detection.
 For gene expression data, we recommend using Weighted Gene Coexpression Network
-Analysis through the [WGCNA][1] package. 
+Analysis through the [WGCNA][1] package. For microbial abundance data we 
+recommend the Python program [SparCC][2]. Microbial communities (modules) can
+then be defined as any group of significantly co-occuring microbes.
 
 [1]: https://cran.r-project.org/web/packages/WGCNA/index.html
-
-**NetRep** will also work with other types of data and networks defined through 
-other algorithms, however you should read the sections on the module 
-preservation statistics, sparse data, proportional data, and hypothesis testing 
-in the details section of the help file for the `modulePreservation` function 
-to determine the correct runtime parameters for your analysis.
+[2]: http://dx.doi.org/10.1371/journal.pcbi.1002687
 
 ### Tutorial data
 
@@ -153,7 +149,7 @@ library("NetRep")
 data("NetRep")
 ```
 
-Seven objects were loaded into the R session:
+This command loads seven objects into the R session:
 
   - `discovery_data`: a matrix with 150 columns (genes) and 30 rows (samples) 
      whose entries correspond to the expression level of each gene in each 
@@ -190,7 +186,8 @@ in the **NetRep** package take the following arguments:
  - `moduleAssignments`: a list of vectors, one for each *discovery* dataset, 
     containing the module assignments for each node in that dataset.
  - `modules`: a list of vectors, one vector for each *discovery* dataset, 
-    containing the names of the modules from that dataset to analyse.
+    containing the names of the modules from that dataset to run the function 
+    on.
  - `discovery`: a vector indicating the names or indices to use as the 
    *discovery* datasets in the `network`, `data`, `correlation`, 
    `moduleAssignments`, and `modules` arguments.
@@ -205,7 +202,15 @@ datasets to compare. More than one  dataset can be specified in each of these
 arguments, for example when performing a pairwise analysis of gene coexpression
 modules identified in multiple tissues.
 
+Typically we would put the code that reads in our data and sets up the input
+lists in its own script. This loading script can then be called from our 
+scripts where we calculate the module preservation, visualise our networks, 
+and calculate the network properties:
+
 ```{r}
+# Read in the data:
+data("NetRep")
+
 # Set up the input data structures for NetRep. We will call these datasets 
 # "cohort1" and "cohort2" to avoid confusion with the "discovery" and "test"
 # arguments in NetRep's functions:
@@ -213,16 +218,14 @@ data_list <- list(cohort1=discovery_data, cohort2=test_data)
 correlation_list <- list(cohort1=discovery_correlation, cohort2=test_correlation)
 network_list <- list(cohort1=discovery_network, cohort2=test_network)
 
-# We do not need to set up a list for containing the 'module_labels' because
-# there is only one "discovery" dataset.
+# We do not need to set up a list for the 'moduleAssignments', 'modules', or 
+# 'test' arguments because there is only one "discovery" dataset.
 ```
 
-Typically we would put the code that reads in our data and sets up the input
-lists in its own script. This loading script can then be called from our 
-scripts where we calculate the module preservation, visualise our networks, 
-and calculate the network properties.
+We will call these "cohort1" and "cohort2" to avoid confusion with the 
+arguments "discovery" and "test" common to **NetRep**'s functions.
 
-## Running the module preservation analysis
+## Running the permutation procedure to test module preservation
 
 Now we will use **NetRep** to permutation test whether the network topology of 
 each module is preserved in our test dataset using the `modulePreservation` 
@@ -233,7 +236,9 @@ the test dataset to determine whether these statistics are significant.
 We will run 10,000 permutations, and split calculation across 2 threads so that
 calculations are run in parallel. By default, `modulePreservaton` will test the
 preservation of all modules, excluding the network background which is assumed
-to have the label "0":
+to have the label "0". This of course can be changed: there are many more 
+arguments than shown here which control how `modulePreservation` runs. See
+`help("modulePreservation")` for a full list of arguments.
 
 ```{r}
 # Assess the preservation of modules in the test dataset.
@@ -244,13 +249,10 @@ preservation <- modulePreservation(
 )
 ```
 
-There are many arguments to control how `modulePreservation` runs, for a full
-list see its helpfile: `help("modulePreservation")`.
-
 The results returned by `modulePreservation` for each dataset comparison are a 
 list containing seven elements:
 
- - `nulls` the null distribution for each statstic and module generated by the
+ - `nulls` the null distribution for each statistic and module generated by the
     permutation procedure.
  - `observed` the observed value of each module preservation statistic for each
    module.
@@ -271,6 +273,7 @@ datasets is returned.
 Let's take a look at our results:
 
 ```{r}
+preservation$observed
 preservation$p.value
 ```
 
@@ -289,7 +292,7 @@ Only modules 1 and 4 are reproducible at this significance threshold.
 ## The module preservation statistics
 
 So what do these statistics measure? Let's take a look at the network topology
-of module 1 in the discovery dataset:
+of Module 1 in the discovery dataset, "cohort1":
 
 ![](NetRep_files/img/mod1.png)
 
@@ -318,25 +321,25 @@ test datasets side by side along with the module preservation statistics:
 
 There are seven module preservation statistics:
 
- 1. **'cor.cor'** measures the concordance of the correlation structure: or, how
-    similar the correlation heatmaps are between the two datasets.
- 2. **'avg.cor'** measures the average magnitude of the correlation coefficients
+ 1. **'cor.cor'** measures the *concordance of the correlation structure*: or, 
+    how similar the correlation heatmaps are between the two datasets.
+ 2. **'avg.cor'** measures the *average magnitude of the correlation coefficients*
     of the module in the test dataset: or, how tightly correlated the module 
-    is on average. This score is penalised where the correlation coefficients
-    change in sign between the two datasets.
- 3. **'avg.weight'** measures the average magnitude of edge weights in the 
+    is on average in the test dataset. This score is penalised where the 
+    correlation coefficients change in sign between the two datasets.
+ 3. **'avg.weight'** measures the *average magnitude of edge weights* in the 
     test dataset: or how connected nodes in the module are to each other on 
     average.
- 4. **'cor.degree'** measures the correlation of the weighted degree of 
+ 4. **'cor.degree'** measures the *concordance of the weighted degree* of 
     nodes between the two datasets: or, whether the nodes that are most 
     strongly connected in the discovery dataset remain the most strongly 
     connected in the test dataset.
- 5. **'cor.contrib'** measures the correlation of the node contribution between
-    the two datasets: this measures whether the summary profile summarises the
-    data in the same way in both datasets.
- 6. **'avg.contrib'** measures the average magnitude of the node contribution in
-    the test dataset: this is a measure of how coherent the data is in the test
-    dataset. This score is penalised where the node contribution changes in 
+ 5. **'cor.contrib'** measures the *concordance of the node contribution* between
+    the two datasets: this measures whether the module's summary profile 
+    summarises the data in the same way in both datasets.
+ 6. **'avg.contrib'** measures the *average magnitude of the node contribution* 
+    in the test dataset: this is a measure of how coherent the data is in the 
+    test dataset. This score is penalised where the node contribution changes in 
     sign between the two datasets: for example, where a gene is differentially
     expressed between the two datasets.
  7. **'coherence'** measures the proportion of variance in the module data 
@@ -345,20 +348,21 @@ There are seven module preservation statistics:
 A permutation procedure is necessary to determine whether the value of each
 statistic is significant: *e.g.* whether they are higher than expected by 
 chance, *i.e.* when measuring the statistics between the module in the 
-discovery dataset, and random sets of nodes in the test dataset. You can also 
-test whether these statistics are smaller than expected by chance
-by changing the alternative hypothesis in the `modulePreservation` function 
-(e.g. `alternative="lower"`)
+discovery dataset, and random sets of nodes in the test dataset. 
 
 By default, the permutation procedure will sample from only nodes that are
 present in both datasets. This is appropriate where the assumption is that any
 nodes that are present in the test dataset but not the discovery dataset are 
-unobserved in the discovery dataset: they may very well fall in one of your
-modules of interest. This is appropriate for microarray data. Alternatively,
+unobserved in the discovery dataset: *i.e.* they may very well fall in one of 
+your modules of interest. This is appropriate for microarray data. Alternatively,
 you may set `null="all"`, in which case the permutation procedure will sample
 from all variables in the test dataset. This is appropriate where the variable
 can be assumed not present in the discovery dataset: for example microbial 
 abundance or RNA-seq data.
+
+You can also test whether these statistics are smaller than expected by chance
+by changing the alternative hypothesis in the `modulePreservation` function 
+(e.g. `alternative="lower"`).
 
 ### Choosing the right statistics
 
@@ -371,7 +375,7 @@ coexpressed.
 For other types of networks, some statistics may be more suitable than others 
 when assessing module preservation. Here, we provide some guidelines and 
 pitfalls to be aware of when interpreting the network properties and module 
-preservation statistcs in other types of networks.
+preservation statistics in other types of networks.
 
 #### Sparse networks
 
@@ -392,7 +396,7 @@ connections each node has to any other node in the module.
 If the network is sparse the permutation tests for the 
 *correlation of weighted degree* may be underpowered. Entries in the null 
 distribution will be `NA` where there were no edges between any nodes in the 
-permuted module in the test dataset. This is because the *weighted degree* will
+permuted module. This is because the *weighted degree* will
 be 0 for all nodes, and the correlation coefficient cannot be calculated 
 between two vectors if all entries are the same in either vector. This reduces
 the effective number of permutations for that test: the permutation P-values
@@ -404,6 +408,10 @@ calculating the permutation test P-values. Note that an `NA` entry does not
 necessarily mean that all edges in the permuted module were 0: it can also mean 
 that all edges are present and have identical weights. To distinguish between
 these cases you should check whether the `avg.weight` is also 0.
+
+The following code snippet shows how to identify these entries in the null 
+distribution, replace them with zeros, and recalculate the permutation test
+P-values:
 
 ```{r, eval=FALSE}
 # Handling NA entries in the 'cor.degree' null distribution for sparse networks
@@ -428,11 +436,12 @@ preservation$p.values <- permutationTest(
 For networks where the edges are directed, the user should be aware that the 
 *weighted degree* is calculated as the column sum of the module within the
 supplied `network` matrix. This usually means that the result will be the 
-*in*-degree: the number and combined weight of edges ending in that node. To
-calculate the *out*-degree the user will need to transpose the matrix supplied
-to the `network` argument.
+*in*-degree: the number and combined weight of edges ending in each node. To
+calculate the *out*-degree you will need to transpose the matrix supplied
+to the `network` argument (*i.e.* using the `t()` function).
 
-Note that directed networks may also have the same pitfalls as sparse networks.
+Note that directed networks are typically sparse, and have the same pitfalls 
+as sparse networks described above.
 
 #### Sparse data
 
@@ -444,22 +453,22 @@ Users should be aware that  the *average node contribution* (**'avg.contrib'**),
 *module coherence* (**'coherence'**) will be systematically underestimated.
 They are all calculated from the *node contribution*,  which measures the 
 Pearson correlation coefficient between each node and the *module summary*. 
-Pearson correlation coefficinets are innapropriate when data is sparse: their
-value will be underestimated when calculated between two vectors where the 
+Pearson correlation coefficinets are inappropriate when data is sparse: their
+value will be underestimated when calculated between two vectors where 
 many observations in either vector are equal to 0. However, this should not 
 affect the permutation test P-values since observations in their null 
 distributions will be similarly underestimated.
 
-The bigger problem with sparse data is with variables where all observations
-are zero in either dataset. These will result in `NA` values for their
-*node contribution* to a module (or permuted module). These will be ignored 
-by the *average node contribution* (**'avg.contrib'**),
+The biggest problem with sparse data is how to handle variables where all 
+observations are zero in either dataset. These will result in `NA` values for 
+their *node contribution* to a module (or permuted module). These will be 
+ignored by the *average node contribution* (**'avg.contrib'**),
 *concordance of node contribution* (**'cor.contrib'**), and *module coherence* 
 (**'coherence'**) statistics: which only take complete cases. This is 
-problematic if many node have `NA` values, since observations in their null 
-distributions will be for permuted modules of varying size. 
+problematic if many nodes have `NA` values, since observations in their null 
+distributions will be for permuted modules of different sizes. 
 
-Their are two approaches to avoiding this issue: 
+Their are two approaches to dealing with this issue: 
 
 1. Filtering both datasets to contain only variables which are present in both 
    datasets. For examples, microbes that are abundant in at least one sample 
@@ -467,9 +476,17 @@ Their are two approaches to avoiding this issue:
 2. Setting observations that are zero to a very small randomly generated 
    number. The goal is for *node contribution* values to be close to 0 where
    they would otherwise be set to `NA`. For microbial abundance data we 
-   recommend generating numbers between 0 and 1 divided by the number of 
+   recommend generating numbers between 0 and 1/the number of 
    samples: the noise values should be small enough that the do not change the
-   *node contribution* where a microbe is present.
+   *node contribution* for microbes which are present in one or more samples.
+   
+For the latter, code to generate noise would look something like:
+
+```{r, eval=FALSE}
+not.present <- which(discovery_data == 0)
+nSamples <- nrow(discovery_data)
+discovery_data[not.present] <- runif(length(not.present), min=0, max=1/nSamples)
+```
 
 #### Proportional data
 
@@ -487,13 +504,14 @@ proportional data. This should not affect the permutation test P-values since
 the null distribution observations will be similarly overestimated. 
 
 Users should also be aware of this when calculating the correlation structure 
-between all nodes for the `correlation` matrix input. 
+between all nodes for the `correlation` matrix input, and use an appropriate
+method for calculating these relationships.
 
 #### Homogenous modules
 
 Homogenous modules are modules where all nodes are similarly correlated or 
 similarly connected: differences in edge weights, correlation coefficients,
-and node contributions amount to noise. 
+and node contributions are due to noise. 
 
 For these modules, the *concordance of correlation* (**'cor.cor'**), 
 *concordance of node contribution* (**'cor.contrib'**), and
@@ -509,8 +527,8 @@ P-values, and the *module coherence* is high, then the module should be
 investigated further. 
 
 Module homogeneity can be investigated through plotting their network topology 
-in both datasets (see next section). The smaller the module, the more likely it
-is to be homogenous.
+in both datasets (see next section). In our experience, the smaller the module, 
+the more likely it is to be topologically homogenous.
 
 #### Small network modules
 
@@ -549,8 +567,8 @@ plotModule(
 ```
 
 By default, nodes are ordered from left to right in decreasing order of 
-*weighted degree*: the sum of edge weights within each module, i.e. how strongly
-connected each node is within a module. For visualisation, the *weighted degree* 
+*weighted degree*: the sum of edge weights within each module, *i.e.* how strongly
+connected each node is within its module. For visualisation, the *weighted degree* 
 is normalised within each module by the maximum value since the *weighted degree* 
 of nodes can be dramatically different for modules of different sizes.
 
@@ -558,8 +576,9 @@ Samples are ordered from top to bottom in descending order of the module summary
 profile of the left-most shown module.
 
 When we plot the four modules in the test dataset, the nodes remain in the same
-order: that is, in decreasing order of *weighted degree* in the *test* dataset.
-This allows you to directly compare topology plots in each dataset of interest:
+order: that is, in decreasing order of *weighted degree* in the *discovery* 
+dataset. This allows you to directly compare topology plots in each dataset of 
+interest:
 
 ```{r modules_in_test, dev="png", dpi=72, fig.height=7, fig.width=7, fig.align="center", results="hold", fig.keep="last", fig.show="hold"}
 plotModule(
@@ -570,7 +589,7 @@ plotModule(
 ```
 
 Here we can clearly see from the correlation structure and network edge weight
-heatmaps that modules 1 and 4 replicate.
+heatmaps that Modules 1 and 4 replicate.
 
 By default, samples in this new plot are orderded in descending order of the 
 left most module's summary profile, as calculated in the `test` dataset. If 
@@ -580,12 +599,12 @@ per the `discovery` dataset by setting `orderSamplesBy = "cohort1"`. We won't
 do this here, since our two datasets have different samples.
 
 We can change the order of nodes on the plot by setting `orderNodesBy`. If we
-want to order nodes instead by our test dataset, we can set 
+want to order nodes instead by our *test* dataset, we can set 
 `orderNodesBy = "cohort2"`. However, a more informative setting is to tell 
 `plotModule` to order the nodes by the average *weighted degree* across our
 datasets. For preserved modules, this provides a more robust estimate of
 the *weighted degree* and a more robust ordering of nodes by relative importance
-to their module, so we will plot just modules 1 and 4
+to their module, so we will plot just Modules 1 and 4. 
 
 ```{r mean_degree, dev="png", dpi=72, fig.height=7, fig.width=7, fig.align="center", results="hold", fig.keep="last", fig.show="hold"}
 plotModule(
@@ -607,8 +626,7 @@ individual elements. A list and description of these can be found in the
 
 When tweaking these parameters, you should set the `dryRun` argument to `TRUE`.
 When `dryRun = TRUE`, only the axes and labels will be drawn, avoiding the
-computation time for the network properties, and the drawing time for the 
-heatmaps, both of which may take some time for large modules. 
+drawing time for the heatmaps, which may take some time for large modules. 
 
 Let's tweak the previous plot:
 
@@ -621,9 +639,6 @@ plotModule(
   dryRun=TRUE
 )
 ```
-
-Note, since calculation of the network properties is skipped, the modules are
-ordered as specified in the `modules` argument.
 
 Now we can quickly iterate over parameters until we're happy with the plot:
 
@@ -691,8 +706,8 @@ use in other downstream analyses. Possible downstream analyses include:
    using the module summary profile.
  - Ranking nodes by relative importance using the weighted node degree
  
-To do this, we use the `networkProperties` function, which takes the same 
-input data as the `modulePreservation` function. We will calculate the network 
+To do this, we use the `networkProperties` function, which has the same 
+arguments as the `modulePreservation` function. We will calculate the network 
 properties of modules 1 and 4, which were preserved in "cohort2", in both 
 datasets:
 
@@ -732,18 +747,19 @@ test_correlation <- as.disk.matrix(test_correlation, tempfile())
 test_network <- as.disk.matrix(test_network, tempfile())
 ```
 
-**NetRep** provides an additional class, `disk.matrix`, which stores a file 
-path to a matrix on disk, along with meta-data on how to read that file. This
-allows **NetRep**'s functions to load matrices into RAM only when required, so
-that only one dataset is kept in memory at any point in time. This is useful
-when working on systems with limited RAM.
+When analysing large datasets, *e.g.* transcriptome-wide gene coexpression 
+networks, it may not be possible to fit all matrices for both datasets in
+memory. **NetRep** provides an additional class, `disk.matrix`, which stores a 
+filepath to a matrix on disk, along with meta-data on how to read that file. 
+This allows **NetRep**'s functions to load matrices into RAM only when 
+required, so that only one dataset is kept in memory at any point in time.
 
 The `disk.matrix` class recognises two types of files: matrix data saved in 
 table format (i.e. a file that is normally read in by `read.table` or 
 `read.csv`), and serialized R objects saved through `saveRDS`. Serialized R 
 objects are much faster to load into R than files in table format, but cannot 
 be read by other programs. We recommend storing your files in both formats 
-unless you are low on disk space. 
+unless you are low on disk space.
 
 First, we need to make sure our matrices are saved to disk. Matrices can be
 converted to `disk.matrix` objects directly through the `as.disk.matrix` 
@@ -891,7 +907,7 @@ plotModule(
 
 ## Running NetRep on a cluster
 
-Module preservation analyses are typically too computationally intense to run
+The permutation procedure is typically too computationally intense to run
 interactively on the head node of a cluster. We recommend splitting your 
 analysis into the following scripts:
 
@@ -899,7 +915,7 @@ analysis into the following scripts:
     matrices as `disk.matrix` format if all your datasets will not fit in 
     memory at once.
  2. A script to load in the matrix data and set up the input lists used by 
-    NetRep's functions.
+    **NetRep**'s functions.
  3. A script that runs the `modulePreservation` analysis for your modules of
     interest.
  4. A script that visualises your modules of interest.
@@ -940,7 +956,7 @@ size of the network, the size of the modules, the number of samples in each
 dataset, the number of modules, and the number of permutations.
 
 The required Wall time can be estimated by running `modulePreservation` with 
-a few permutations *per core* and setting the `verbose` flag to `TRUE`. The 
+a few permutations **per core** and setting the `verbose` flag to `TRUE`. The 
 required Wall time can then be estimated from the time stamps of the output.
 
 For example, consider the following output from our cluster: 
@@ -977,17 +993,17 @@ cat(
 Here, we are running `modulePreservation` to test whether all gene coexpression 
 network modules discovery in the adiposed tissue are preserved in the liver 
 tissue of the same samples. These datasets consist of roughly 22,000 genes and
-300 samples. We have run 320 permutations on 32 cores: i.e. 10 permutations per 
-core.
+300 samples. We have run 320 permutations on 32 cores: *i.e.* 10 permutations 
+per core.
 
 We can use the timestamps surrounding the progress report ("100% completed") 
 in the output to estimate the total runtime for an arbitrary number of 
 permutations. It took 22 seconds to run 10 permutations per core, so 2.2
 seconds per permutation per core. If we want to run 20,000 permutations, this
 will take approximately 23 minutes. Adding the time taken to check the input
-and swap datasets (\~ 4 minutes), we would allocate 30 minutes for the job. 
-It is always better to provide an overly cautious estimate of the job runtime
-so that the cluster does not cancel the job just as it is finishing.
+and swap datasets (approximately 4 minutes), we would allocate 30 minutes for 
+the job. It is always better to provide an overly cautious estimate of the job 
+runtime so that the cluster does not cancel the job just as it is finishing.
 
 ### Estimating memory usage
 
@@ -999,9 +1015,9 @@ at any point in time. Each thread requires additional memory to store the
 network properties of each permuted module at each permutation. The additional
 memory usage of each thread depends on the sizes of the modules to be tested. 
 
-The simplest way to run **NetRep** is to use a full node for your job: that is,
-set the number of threads to the number of cores on that node, and request all
-the memory of that node. 
+The simplest way to run the permutation procedure is to allocate a full node 
+for your job: that is, set the number of threads to the number of cores on 
+that node, and request all the memory of that node. 
 
 If you wish to allocate less memory, you can estimate the memory requirements 
 of **NetRep** through the same job we used to estimate runtime. You could then 
@@ -1009,7 +1025,8 @@ allocate the maximum memory used by this job (plus 10%).
 
 ## Optimising runtime
 
-There are several approaches that can be used to reduce runtime.
+There are several approaches that can be used to reduce runtime of the 
+permutation procedure.
 
 If your system has sufficient memory, you may see a performance improvement by
 running multiple instances of **NetRep** rather than parallelising over 
@@ -1020,6 +1037,8 @@ performance between a single threaded instance vs. a multi thread instance.
 Performance may also improve by compiling R against different `BLAS` and 
 `LAPACK` libraries prior to installation of **NetRep**. This requires some 
 experimentation as different libraries will work better for different systems.
+Note however that changing these typically means recompiling all of R from 
+source.
 
 The runtime of the permutation procedure is primarily influenced by the size of
 the modules and the number of samples in each test dataset. Permutation testing
